[build-system]
requires = ["setuptools >= 74.0"]
build-backend = "setuptools.build_meta"

[project]
name = "medea"
version = "1.1.0.b1"
authors = [
    {name = "Massimilano Romana"},
    {name = "Rossella Prandi", email = "r.prandi@simularia.it"},
    {name = "Giuseppe Carlino", email = "g.carlino@simularia.it" }
]
maintainers = [
    {name = "Giuseppe Carlino", email = "g.carlino@simularia.it" }
]
description = "MEDEA - Meteorology Dependent Emission Algorithms"
readme = "README.md"
license = { file = "LICENSE.txt" }
dependencies = [
    "numpy==2.2.4",
    "pandas==2.2.3",
    "python-dateutil==2.8.2",
    "pytz==2023.3",
    "six==1.16.0",
    "tzdata==2023.3",
]

[project.scripts]
medea = "medea.medea:medea"

[tool.basedpyright]
typeCheckingMode = "basic"

[tool.ruff.lint]
select = ["NPY201"]

